--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+section.wrapper{
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+
+    header{
+        padding: 1rem;
+        border-bottom: 1px solid gray;
+    }
+
+    main{
+        flex: auto;
+        padding: 1rem;
+    }
+
+    footer{
+        padding: 1rem;
+        border-top: 1px solid gray;
+    }
+}
+
