--- a/src/app/user/containers/shell-user/shell-user.component.html
+++ b/src/app/user/containers/shell-user/shell-user.component.html
@@ -1,3 +1,3 @@
 <section>
-    <app-user [InwelcomeMsg]="OutwellcomeMsg"></app-user>
+    <app-user [InwelcomeMsg]="OutwellcomeMsg" [title]="newTitle" (newUpdate)="newUpdate()"></app-user>
 </section>
