before add feature store

--- a/src/app/user/containers/shell-user/shell-user.component.html
+++ b/src/app/user/containers/shell-user/shell-user.component.html
@@ -1,3 +1,5 @@
 <section>
-    <app-user [InwelcomeMsg]="OutwellcomeMsg" [title]="newTitle" (newUpdate)="newUpdate()"></app-user>
+    <app-user (newUsers)="getNewUsers()" [InwelcomeMsg]="OutwellcomeMsg" [title]="newTitle"
+        (newUpdate)="getNewUpdate()">
+    </app-user>
 </section>
