--- a/src/app/user/components/user/user.component.html
+++ b/src/app/user/components/user/user.component.html
@@ -1,3 +1,4 @@
 <p>{{InwelcomeMsg}}</p>
 <h2>{{title}}</h2>
 <button (click)="updateTitle()">Update Title</button>
+<button (click)="getUsers()">Get Users</button>
