effects added with preventing unwanted calls

--- a/src/app/user/components/user/user.component.html
+++ b/src/app/user/components/user/user.component.html
@@ -2,3 +2,6 @@
 <h2>{{title}}</h2>
 <button (click)="updateTitle()">Update Title</button>
 <button (click)="getUsers()">Get Users</button>
+<ul>
+    <li *ngFor="let user of newUsers">{{user.title}}</li>
+</ul>
