--- a/src/app/user/containers/shell-user/shell-user.component.html
+++ b/src/app/user/containers/shell-user/shell-user.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-user (newUsers)="getNewUsers()" [InwelcomeMsg]="OutwellcomeMsg" [title]="newTitle"
-        (newUpdate)="getNewUpdate()">
+    <app-user (getNewUsers)="setNewUsers()" [newUsers]="(users$|async)" [InwelcomeMsg]="OutwellcomeMsg"
+        [title]="newTitle" (newUpdate)="getNewUpdate()">
     </app-user>
 </section>
