--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/dist/css/bootstrap.css";
+
 *{
     padding: 0;
     margin: 0;
@@ -25,3 +27,10 @@ section.wrapper{
     }
 }
 
+.card-holder{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-row-gap: 2rem; 
+  row-gap: 2rem;
+}
