--- a/src/app/user/components/user-view/user-view.component.html
+++ b/src/app/user/components/user-view/user-view.component.html
@@ -8,7 +8,7 @@
         <div class="card-body">
             <h5 class="card-title">{{user.id}} {{user.title}}</h5>
             <p class="card-text">{{user.body}}</p>
-            <a routerLink="viewUser/{{user.id}}" class="btn btn-primary">Go somewhere</a>
+            <a routerLink="profile/{{user.id}}" class="btn btn-primary">Go somewhere</a>
         </div>
     </div>
 </div>
